# parallel_array_init

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
